Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -111,11 +111,10 @@
                 <p id="pass-fail-desc"></p>
                 
                 <div class="btn-group">
-                    <button class="btn btn-outline" onclick="app.showHome()">მთავარი</button>
                     <button class="btn btn-success" onclick="app.startExamMode()">თავიდან ცდა</button>
                 </div>
             </div>
-            <div class="review-header">შეცდომების და გამოტოვებული კითხვების გარჩევა:</div>
+            <div class="review-header">შეცდომების გარჩევა:</div>
             <div id="review-container"></div>
         </section>
     </main>
@@ -124,3 +123,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
